# HeadUnit

HeadUnit/: CMakeLists.txt  basic_func.cpp  basic_func.h  main.cpp  main.qml  main.qml.autosave  map_page.qml  media_contents.qrc  media_page.qml  music_page.qml  music_player.h  qml.qrc  setting_page.qml  weather_provider.h
